--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                             <a class="nav-link" href="#">Blogs</a>
                         </li>
                     </ul>
-                    <button class="btn ms-5 btn-outline-success" type="submit">Search</button>
+                    <button class="btn ms-5 btn-outline-danger" type="submit">Search</button>
                 </div>
             </div>
         </nav>
@@ -326,7 +326,7 @@
                         </ul>
                     </div>
                     <div class="mt-5 ps-3">
-                    <small class="text-light">© 2020 bike. All rights reserved</small>
+                    <small class="text-light">&#169; 2020 bike. All rights reserved</small>
                     </div>
                 </div>
                 <div class="col-12 col-md-3">
